resources/assets/styles/components/_buttons.scss
.btn-default {
  display: inline-flex;
  background-color: $globe;
  color: $white;
  padding: $golden-ratio-1 $golden-ratio-2;
  margin-right: $golden-ratio-2;
  font-size: $type-2;
  text-transform: uppercase;
  font-weight: 700;
  line-height: 1.7em;
  box-shadow: $box-shadow;
}

.btn,
a.btn,
a.btn:visited {
  @extend .btn-default;

  &a:hover,
  &a:focus {
    color: $white;
  }

  &.btn-inverse {
    background-color: $white;
    color: $globe;
  }

  &.btn-outline {
    background-color: transparent;
    color: $globe;
    border: 2px solid $globe;
    padding: calc(#{$golden-ratio-1 - 2}) calc(#{$golden-ratio-2 - 2});
    box-shadow: none !important;
  }

  &.btn-inverse.btn-outline {
    background-color: transparent !important;
    color: $white;
    border-color: $white;
  }

  &.btn-secondary {
    background-color: $smokey;

    &.btn-inverse {
      background-color: $gray-1;
      color: $smokey;
    }

    &.btn-outline {
      color: $gray-1;
      background-color: transparent !important;
      border-color: $rock;
    }
  }

  /*
   * the following should be universal for all container styles
   */

  &.btn-with-icon {
    background-color: $white !important;
    color: $smokeyx !important;
    position: relative;
    padding-right: calc(#{$golden-ratio-2 + $golden-ratio-4});

    span {
      width: $golden-ratio-4;
      height: $golden-ratio-4;
      position: absolute;
      right: 0;
      top: 0;
      text-align: center;
      line-height: $golden-ratio-4;
      background-color: $orange;
      color: $white;
    }

    &.btn-default:not(.btn-inverse) {
      padding: calc(#{$golden-ratio-1 - 2}) calc(#{$golden-ratio-2 - 2});
      padding-right: calc(#{$golden-ratio-2 + $golden-ratio-4});
      border: 2px solid $white;
      border-right: none;

      span {
        top: -2px;
      }
    }
  }
}

input[type="submit"],
input[type="button"] {
  font-family: $sans !important;
}

